--- a/credits.html
+++ b/credits.html
@@ -36,7 +36,7 @@
   <body background="Images/iconslanted.png">
     <center>
       <h1>Credits</h1>
-      <table border="5">
+      <table border="5" style="background-color: white">
         <tbody style="text-align: center">
           <tr>
             <td><b>Credit</b></td>
@@ -45,9 +45,15 @@
             <td><b>Link</b></td>
           </tr>
           <tr>
-            <td>Scott Cawthon</td>
-            <td>Five Nights at Freddy's<br />Icon</td>
-            <td>Entire website idea<br />MatPat's alternate video</td>
+            <td>Scott Cawthon and<br />Steel Wool Studios</td>
+            <td>
+              Five Nights at Freddy's, icon, selfies<br />FEI logo<br />FFD
+              Poster<br />Maps and models
+            </td>
+            <td>
+              Entire website idea<br />MatPat's alternate video<br />FEI logo in
+              press releases<br />FFD Poster<br />Pictures
+            </td>
             <td>
               <a target="_blank" href="http://scottgames.com/"
                 >http://scottgames.com/</a
@@ -55,6 +61,9 @@
                 target="_blank"
                 href="https://www.youtube.com/user/animdude"
                 >https://www.youtube.com/user/animdude</a
+              ><br />
+              <a target="_blank" href="https://www.steelwoolstudios.com/">
+                https://www.steelwoolstudios.com/</a
               >
             </td>
           </tr>
@@ -66,14 +75,14 @@
               <a
                 target="_blank"
                 href="https://www.youtube.com/channel/UC3Fy6Pb8UOfAJ2OjJ4Yok6A"
-                >https://www.youtube.com/channel/UC3Fy6Pb8UOfAJ2OjJ4Yok6A</a
+                >https://www.youtube.com/channel/<br />UC3Fy6Pb8UOfAJ2OjJ4Yok6A</a
               >
             </td>
           </tr>
           <tr>
             <td>kaizerin</td>
             <td>Freddy Fazbear's Pizza logo</td>
-            <td>Abandonned Freddy's picture</td>
+            <td>Abandonned Freddy's picture, newspapers</td>
             <td>
               <a target="_blank" href="https://www.deviantart.com/kaizerin"
                 >https://www.deviantart.com/kaizerin</a
@@ -91,8 +100,8 @@
                 >https://www.youtube.com/watch?v=iOztnsBPrAA</a
               ><br /><a
                 target="_blank"
-                href="https://www.youtube.com/channel/UC7_YxT-KID8kRbqZo7MyscQ"
-                >https://www.youtube.com/channel/UC7_YxT-KID8kRbqZo7MyscQ</a
+                href="https://www.youtube.com/c/Markiplier"
+                >https://www.youtube.com/c/Markiplier</a
               >
             </td>
           </tr>
@@ -125,7 +134,7 @@
           <tr>
             <td>Phil Wang</td>
             <td>thispersondoesnotexist.com</td>
-            <td>Henry and William's picture</td>
+            <td>Human pictures</td>
             <td>
               <a target="_blank" href="https://thispersondoesnotexist.com"
                 >https://thispersondoesnotexist.com/</a
@@ -163,7 +172,7 @@
             </td>
           </tr>
           <tr>
-            <td>United States<br />Patent Office</td>
+            <td>U.S. Patent Office +<br />patent original authors</td>
             <td>Patent #4,078,316; 4,107,948; 4,119,900</td>
             <td>Fake patents for Henry and William</td>
             <td>
@@ -230,7 +239,7 @@
             </td>
           </tr>
           <tr>
-            <td>Utah State<br />Tax Commission</td>
+            <td>Utah State Tax Commission</td>
             <td>Notice of Change, Logo</td>
             <td>FFI, AR's Notice of Change</td>
             <td>
@@ -259,16 +268,263 @@
               >
             </td>
           </tr>
+          <tr>
+            <td>
+              Newspapers.com +<br />
+              Southern Utah Free Press<br />
+              Washington County News<br />
+              The Daily Spectrum<br />
+              The Daily Herald
+            </td>
+            <td>Original newspapers scans</td>
+            <td>Physical newspapers</td>
+            <td>
+              <a target="_blank" href="https://www.newspapers.com/"
+                >https://www.newspapers.com/</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td>
+              University of Utah<br />
+              Utah Tech University<br />
+            </td>
+            <td>Diploma designs and logo</td>
+            <td>Henry and William's diploma</td>
+            <td>
+              <a target="_blank" href="https://utahtech.edu/"
+                >https://utahtech.edu/</a
+              ><br />
+              <a target="_blank" href="https://www.utah.edu/"
+                >https://www.utah.edu/</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td>Utah County Clerk Office</td>
+            <td>Marriage license template</td>
+            <td>William and Henry's marriage licenses</td>
+            <td>
+              <a target="_blank" href="https://www.utahcounty.gov/"
+                >https://www.utahcounty.gov/</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td>BlueNegatiive/@NegatiiveMan</td>
+            <td>Springlock Blender models</td>
+            <td>FFD opening promotion pic + news report</td>
+            <td>
+              <a target="_blank" href="https://twitter.com/NegatiiveMan"
+                >https://twitter.com/NegatiiveMan</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td>Adrian The Puppeteer<br />mahyarmovie</td>
+            <td>FFD map (SFM and Blender port)</td>
+            <td>FFD opening promotion pic + news report</td>
+            <td>
+              <a
+                target="_blank"
+                href="https://steamcommunity.com/id/AdrianthePuppeteer"
+                >https://steamcommunity.com/id/AdrianthePuppeteer</a
+              ><br />
+              <a target="_blank" href="https://www.deviantart.com/mahyarmovie"
+                >https://www.deviantart.com/mahyarmovie</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td>Unknown</td>
+            <td>FFD Logo</td>
+            <td>Newspapers + photos + videos</td>
+            <td>
+              Unknown
+            </td>
+          </tr>
+          <tr>
+            <td>
+              Getty Images +<br />Roberto Machado Noa<br />Smith Collection/Gado
+            </td>
+            <td>Chuck E. Cheese's restaurant pictures</td>
+            <td>Edited FFP restaurant photos</td>
+            <td>
+              <a target="_blank" href="https://www.gettyimages.com/"
+                >https://www.gettyimages.com/</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td>alfredman20+BTB-TV+<br />RazvanAndrei123+Mrcrio</td>
+            <td>FNAF 2 animatronic models and Blender port</td>
+            <td>FFP restaurant photos</td>
+            <td>
+              <a target="_blank" href="https://www.deviantart.com/alfredman20"
+                >https://www.deviantart.com/alfredman20</a
+              >
+              <br />
+              <a target="_blank" href="https://www.deviantart.com/btb-tv"
+                >https://www.deviantart.com/btb-tv</a
+              >
+              <br />
+              <a
+                target="_blank"
+                href="https://www.deviantart.com/razvanandrei123"
+                >https://www.deviantart.com/razvanandrei123</a
+              >
+              <br />
+              <a target="_blank" href="https://www.deviantart.com/mrcrio"
+                >https://www.deviantart.com/mrcrio</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td>ceborg</td>
+            <td>FNAF 2 HW map for Blender</td>
+            <td>FFP restaurant photos</td>
+            <td>
+              <a target="_blank" href="https://www.deviantart.com/ceborg"
+                >https://www.deviantart.com/ceborg</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td>UFMPDA + RazvanAndrei123</td>
+            <td>FNAF 1 Model pack + Blender 3.0 port</td>
+            <td>New FFP restaurant photos</td>
+            <td>
+              <a target="_blank" href="https://www.deviantart.com/UFMPDA"
+                >https://www.deviantart.com/UFMPDA</a
+              ><br /><a
+                target="_blank"
+                href="https://www.deviantart.com/RazvanAndrei123"
+                >https://www.deviantart.com/RazvanAndrei123</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td>WGug4</td>
+            <td>FNAF 1 HW Map</td>
+            <td>New FFP restaurant photos</td>
+            <td>
+              <a target="_blank" href="https://www.deviantart.com/WGug4"
+                >https://www.deviantart.com/WGug4</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td>jorjimodels</td>
+            <td>Sister Location models</td>
+            <td>Circus Baby promo photo</td>
+            <td>
+              <a target="_blank" href="https://www.deviantart.com/jorjimodels"
+                >https://www.deviantart.com/jorjimodels</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td>Arayaentertainment</td>
+            <td>Cirucs Baby's Rental map</td>
+            <td>Circus Baby promo photo</td>
+            <td>
+              <a
+                target="_blank"
+                href="https://www.deviantart.com/Arayaentertainment"
+                >https://www.deviantart.com/Arayaentertainment</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td>KUTV and Terry Wood</td>
+            <td>
+              Original news report footage<br />Original anchor voice for
+              cloning
+            </td>
+            <td>FFD news report</td>
+            <td>
+              <a target="_blank" href="https://kutv.com/">https://kutv.com/</a>
+            </td>
+          </tr>
+          <tr>
+            <td>CEC Entertainment and ABC</td>
+            <td>Original Chuck E. Cheese's 70s footage
+            </td>
+            <td>FFD news report</td>
+            <td>
+              <a target="_blank" href="https://www.chuckecheese.com/">https://www.chuckecheese.com/</a><br><a target="_blank" href="https://www.abc.net.au/">https://www.abc.net.au/
+            </td>
+          </tr>
+          <tr>
+            <td>Creative Engineering, Inc. and <br>original song writers/singers</td>
+            <td>The Rock-afire Explosion songs
+            </td>
+            <td>FFD news report</td>
+            <td>
+              <a target="_blank" href="http://engineeringcreative.com/">http://engineeringcreative.com/</a>
+            </td>
+          </tr>
+          <tr>
+            <td>Kristian Byrne</td>
+            <td>William's voice actor
+            </td>
+            <td>FFD news report<br>William's voicemails</td>
+            <td>
+              <a target="_blank" href="https://www.fiverr.com/kristianbyrne">https://www.fiverr.com/kristianbyrne</a>
+            </td>
+          </tr>
+          <tr>
+            <td>KTVX and Dan Breinholt</td>
+            <td>
+              Original news report footage<br />Original anchor voice for
+              cloning
+            </td>
+            <td>1985 MCI and Bite 87 news report</td>
+            <td>
+              <a target="_blank" href="https://www.abc4.com/">https://www.abc4.com/</a>
+            </td>
+          </tr>
+          <tr>
+            <td>woolclock</td>
+            <td>Stanley Hall's voice actor
+            </td>
+            <td>1985 MCI news report</td>
+            <td>
+              <a target="_blank" href="https://www.fiverr.com/woolclock">https://www.fiverr.com/woolclock</a>
+            </td>
+          </tr>
+          <tr>
+            <td>KSL-TV<br>Carole Mikita and Bruce Lindsay</td>
+            <td>
+              Original news report footage<br />Original anchor voices for
+              cloning
+            </td>
+            <td>1992 MCI and bankrupt news report</td>
+            <td>
+              <a target="_blank" href="https://ksltv.com/">https://ksltv.com/</a>
+            </td>
+          </tr>
+          <tr>
+            <td>bigbenva</td>
+            <td>Hurricane Chief's voice actor
+            </td>
+            <td>1992 MCI news report</td>
+            <td>
+              <a target="_blank" href="https://www.fiverr.com/bigbenva">https://www.fiverr.com/bigbenva</a>
+            </td>
+          </tr>
         </tbody>
       </table>
-      <p style="font-size: 15px">
+      <p style="font-size: 15px; width: 65%; text-align: justify">
         *: I originally used Squimpus McGrimpus's William Afton photo as I found
         it fitting. Now that I'm familar with editing, I've decided to create my
-        own William.
+        own William.<br />
+        FFD: Fredbear's Family Diner - FFP: Freddy Fazbear's Pizza - FEI:
+        Fazbear Entertainment Inc. - AR: Afton Robotics
       </p>
       <hr width="20%" />
-      <h2>Who is Jamie Lorge?</h2>
-      <p style="width: 65%">
+      <h2>About the website</h2>
+      <p style="width: 65%; text-align: justify">
         The website and
         <a
           target="_blank"
@@ -277,18 +533,21 @@
         >
         is part of a series that dives into the question: "What if Five Nights
         at Freddy's was real?". I've been a fan since the release of the first
-        game, and like some of the younger fans at that point, I always wanted
-        to believe that the place was actually real. Welp, now that I'm more
-        competent, why not make it real myself?<br /><br />
-      </p>
-      <hr width="20%" />
-      <p style="width: 65%">
-        I am not from the United States so the documents I produce is likely
-        inaccurate. If you've spotted any mistakes (lore-wise, document-wise),
-        or if you have brilliant ideas about what to add to Universe 87's
-        archive or this website, feel free to send me an email via
+        game, and like some of the younger fans at that point, I have always
+        wanted to believe that the place was actually real. Well, now that I'm
+        more competent, why not make it real myself?
+        <br /><br />
+        If you have spotted any mistakes (lore-wise, document-wise), you have
+        brilliant ideas about what to add to Universe 87's archive or this
+        website, you are a copyright holder who I forgot to credit/wishes for
+        the removal of your property on this website, or you just want to
+        contact me, feel free to send me an email via
         <a href="mailto:jlorgearchives@gmail.com">jlorgearchives@gmail.com</a>.
-        <span title="Thank you! (Vietnamese)">Cảm ơn bạn!</span>
+        Thank you! <br /><br />
+        Unless specified above, everything displayed on the website and the
+        YouTube channel was painstakingly created and recreated by me. If you
+        wish to share anything, be sure to link back to my website or the
+        YouTube channel, and if you can, email me about it so I can like it :D
       </p>
       <hr />
     </center>
