--- a/Sub-pages/UniverseIndex/Uni87/Documentation/NET-87/net87doc.html
+++ b/Sub-pages/UniverseIndex/Uni87/Documentation/NET-87/net87doc.html
@@ -26,23 +26,38 @@
           href="https://www.youtube.com/watch?v=N_tNlu4_7RY"
           target="”_blank”"
           >High-definition version</a
-        > (External)
+        >
+        (External)
       </p>
       <h3>Tape 2</h3>
-      <p><i>Error: File not found!</i></p>
+      <p><i>Low-definition version: File not found!</i></p>
+      <p>
+        <a class="valid" href="https://youtu.be/2jmVoStSJF8" target="”_blank”"
+          >High-definition version</a
+        >
+        (External)
+      </p>
       <h3>Tape 3</h3>
       <p><i>Error: File not found!</i></p>
-      <p><i>External links must be opened with <span
-          title="Hyperlink leads to future temporal period, without protocol, system will be overwhelmed"
-          >FDPA<sub>179</sub></span
-        > protocol.</i></p>
+      <p>
+        <i
+          >External links must be opened with
+          <span
+            title="Hyperlink leads to future temporal period, without protocol, system will be overwhelmed"
+            >FDPA<sub>179</sub></span
+          >
+          protocol.</i
+        >
+      </p>
       <hr width="25%" />
     </center>
     <a class="valid" href="../../uni87.html">Return to Universe Page</a>
     <span style="color: white">|</span>
     <a class="valid" href="../../../uniidx_4.html">Return to Universe Index</a>
     <span style="color: white">|</span>
-    <a class="valid" href="../../../../../index.html">Return to the Home Page</a>
+    <a class="valid" href="../../../../../index.html"
+      >Return to the Home Page</a
+    >
     <hr />
     <center>
       <p>
